--- a/index.html
+++ b/index.html
@@ -5,4 +5,7 @@ html
   <title>My GitHub pages website</title>
 </head>
  <body>
-   <hl>
+   <hl>welcome to my GitHub Pages Website!</hl>
+   <p>This is simple github pages website.</p>
+ </body>
+</html>
