--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ html
   <title>My GitHub pages website</title>
 </head>
  <body>
-   <hl>welcome to my GitHub Pages Website!</hl>
+   <hl>Welcome to my GitHub Pages Website!</hl>
    <p>This is simple github pages website.</p>
  </body>
 </html>
